--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec babel-node backend/server.js"
+    "start": "nodemon --watch backend --exec babel-node backend/server.js",
+    "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install && npm run build",
+    "heroku-build": "npm run build && cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -26,5 +28,6 @@
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "nodemon": "^2.0.4"
-  }
+  },
+  "engines": {"node": "12.4.0", "npm":"6.9.0"}
 }
