--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --watch backend --exec babel-node backend/server.js",
     "build": "rm -rf dist && babel backend -d dist  && cd frontend && npm install && npm run build",
-    "heroku-build": "npm run build && cd frontend && npm install && npm run build"
+    "heroku-postbuild-x": "npm run build && cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
