babelrc test for heroku

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
         [
             "@babel/preset-env",
             { "targets": {
-                "node":"current"
+                // "node":"current"
+                "esmodules": true
             }}
         ]
     ]
