--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
     "presets": [
         [
-            "@babel/preset-env",
+            // "@babel/preset-env",
+            "@babel/plugin-transform-runtime",
             { "targets": {
-                // "node":"current"
-                "esmodules": true
+                 "node":"current"
+                // "esmodules": true
             }}
         ]
     ]
