babelrc changes for heroku

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
     "presets": [
         [
-            // "@babel/preset-env",
-            "@babel/plugin-transform-runtime",
+            "@babel/preset-env",
+           // "@babel/plugin-transform-runtime",
             { "targets": {
-                 "node":"current"
+                  "node":"current"
                 // "esmodules": true
             }}
         ]
