--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
@@ -28,5 +29,8 @@
     "eslint-plugin-react": "^7.21.5",
     "nodemon": "^2.0.4"
   },
-  "engines": {"node": "12.4.0", "npm":"6.9.0"}
+  "engines": {
+    "node": "12.4.0",
+    "npm": "6.9.0"
+  }
 }
